// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ClaimPaper with ClaimBody 1`] = `
<div
  className="MuiPaper-root-177 MuiPaper-elevation1-180 MuiPaper-rounded-178 Component-root-175 Component-root-176 Component-root-174"
>
  <h5
    className="MuiTypography-root-206 MuiTypography-h5-215 MuiTypography-colorTextPrimary-231 MuiTypography-alignCenter-222 WithStyles(ForwardRef(Typography))-root-204 WithStyles(ForwardRef(Typography))-root-205"
  >
    This is a claim body
  </h5>
</div>
`;

exports[`Storyshots Claims Evidence 1`] = `
<div
  className="MuiPaper-root-414 MuiPaper-elevation0-416 MuiPaper-rounded-415 MuiExpansionPanel-root-410 MuiExpansionPanel-rounded-411 Component-root-409"
>
  <div
    aria-disabled={false}
    aria-expanded={false}
    className="MuiButtonBase-root-449 MuiExpansionPanelSummary-root-443 Component-root-441"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiExpansionPanelSummary-content-447 Component-content-442"
    >
      <div
        className="MuiBox-root-452 MuiBox-root-453"
      >
        <div
          className="MuiBox-root-452 MuiBox-root-454"
          onClick={[Function]}
        >
          <button
            aria-haspopup="true"
            className="MuiButtonBase-root-449 MuiButton-root-459 MuiButton-text-461 WithStyles(ForwardRef(Button))-root-457 WithStyles(ForwardRef(Button))-root-458 Component-root-455 Component-root-456"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-460"
            >
              66
              %
            </span>
          </button>
        </div>
      </div>
      <h6
        className="MuiTypography-root-481 MuiTypography-h6-491 WithStyles(ForwardRef(Typography))-root-479 WithStyles(ForwardRef(Typography))-root-480"
      >
        <a
          className="MuiTypography-root-481 MuiTypography-colorInherit-503 MuiLink-root-513 MuiLink-underlineHover-515 Component-root-511 Component-root-512"
          href="/somesay/this-is-another-claim"
          onClick={[Function]}
        >
          This is a claim that stretches the limits of this system. It has precisely 255 characters, the maximum number of characters that a claim can have and still be valid. Anything longer than this will be rejected by the system because it is too long. Goodbye.
        </a>
      </h6>
      <div
        className="MuiBox-root-452 MuiBox-root-518"
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-449 MuiButton-root-459 MuiButton-text-461 WithStyles(ForwardRef(Button))-root-457 WithStyles(ForwardRef(Button))-root-519"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-460"
          >
            I agree
          </span>
        </button>
        <button
          className="MuiButtonBase-root-449 MuiButton-root-459 MuiButton-text-461 WithStyles(ForwardRef(Button))-root-457 WithStyles(ForwardRef(Button))-root-520"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-460"
          >
            I'm not sure
          </span>
        </button>
        <button
          className="MuiButtonBase-root-449 MuiButton-root-459 MuiButton-text-461 WithStyles(ForwardRef(Button))-root-457 WithStyles(ForwardRef(Button))-root-521"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-460"
          >
            I disagree
          </span>
        </button>
      </div>
    </div>
    <div
      aria-disabled={false}
      aria-hidden="true"
      className="MuiButtonBase-root-449 MuiIconButton-root-522 MuiIconButton-edgeEnd-524 MuiExpansionPanelSummary-expandIcon-448"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={-1}
    >
      <span
        className="MuiIconButton-label-530"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-531"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    className="MuiCollapse-container-540 MuiCollapse-hidden-542"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-543"
    >
      <div
        className="MuiCollapse-wrapperInner-544"
      >
        <div
          role="region"
        >
          <div
            className="MuiExpansionPanelDetails-root-545"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Claims SupportList 1`] = `
<div
  className="MuiBox-root-341 MuiBox-root-342"
>
  <div
    className="MuiBox-root-341 MuiBox-root-343"
  >
    <h5
      className="MuiTypography-root-346 MuiTypography-h5-355 WithStyles(ForwardRef(Typography))-root-344 WithStyles(ForwardRef(Typography))-root-345"
    >
      because
    </h5>
    <div
      className="MuiBox-root-341 MuiBox-root-376"
    >
      <form
        onReset={[Function]}
        onSubmit={[Function]}
      >
        <div
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-owns="react-autowhatever-1"
          role="combobox"
          style={Object {}}
        >
          <div
            className="MuiInputBase-root-391 MuiInput-root-379 MuiInput-underline-383 MuiInputBase-fullWidth-400 MuiInput-fullWidth-386"
            field="body"
            onClick={[Function]}
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls="react-autowhatever-1"
              autoComplete="off"
              className="MuiInputBase-input-401 MuiInput-input-387"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="why?"
              style={Object {}}
              type="text"
              value=""
            />
          </div>
          <div
            id="react-autowhatever-1"
            role="listbox"
            style={Object {}}
          >
            
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots Claims default 1`] = `
<div
  className="MuiGrid-root-238 MuiGrid-container-239 MuiGrid-spacing-xs-1-261 WithStyles(ForwardRef(Grid))-root-236 WithStyles(ForwardRef(Grid))-root-237"
/>
`;

exports[`Storyshots Header default 1`] = `
<header>
  <header
    className="MuiPaper-root-43 MuiPaper-elevation4-49 MuiAppBar-root-34 MuiAppBar-positionStatic-38 MuiAppBar-colorDefault-40"
  >
    <div
      className="MuiToolbar-root-72 MuiToolbar-regular-74 MuiToolbar-gutters-73 WithStyles(ForwardRef(Toolbar))-root-70 WithStyles(ForwardRef(Toolbar))-root-71"
    >
      <button
        aria-haspopup="true"
        className="MuiButtonBase-root-95 MuiButton-root-78 MuiButton-text-80 WithStyles(ForwardRef(Button))-root-76 WithStyles(ForwardRef(Button))-root-77"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-79"
        >
          <img
            alt="logo"
            className="Component-logo-98"
            src="logo.svg"
          />
        </span>
        <span
          className="MuiTouchRipple-root-164"
        />
      </button>
      <h6
        className="MuiTypography-root-105 MuiTypography-h6-115 WithStyles(ForwardRef(Typography))-root-103 WithStyles(ForwardRef(Typography))-root-104 Component-ohhey-33"
      >
        oh hey!
      </h6>
      <form
        onReset={[Function]}
        onSubmit={[Function]}
      >
        <div
          className="MuiInputBase-root-147 MuiInput-root-135 MuiInput-underline-139"
          onClick={[Function]}
        >
          <input
            className="MuiInputBase-input-157 MuiInput-input-143"
            name="username"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="MuiInputBase-root-147 MuiInput-root-135 MuiInput-underline-139"
          onClick={[Function]}
        >
          <input
            className="MuiInputBase-input-157 MuiInput-input-143"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="password"
            value=""
          />
        </div>
        <button
          className="MuiButtonBase-root-95 MuiButton-root-78 MuiButton-text-80 WithStyles(ForwardRef(Button))-root-76 WithStyles(ForwardRef(Button))-root-163"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="submit"
        >
          <span
            className="MuiButton-label-79"
          >
            log in
          </span>
          <span
            className="MuiTouchRipple-root-164"
          />
        </button>
      </form>
    </div>
  </header>
</header>
`;

exports[`Storyshots UI components ClaimPaper 1`] = `
<div
  className="MuiPaper-root-6 MuiPaper-elevation1-9 MuiPaper-rounded-7 Component-root-4 Component-root-5 Component-root-3"
>
  This is some paper on which to write a claim.
</div>
`;

exports[`Storyshots UI components Spinner 1`] = `
<div
  className="sk-fade-in sk-spinner Spinner-root-1 Spinner-root-2 sk-chasing-dots"
>
  <div />
  <div />
</div>
`;

exports[`Storyshots UserClaim default 1`] = `
<div
  className="MuiPaper-root-559 MuiPaper-elevation1-562 MuiPaper-rounded-560 Component-root-557 Component-root-558 Component-root-556"
>
  <div
    className="MuiToolbar-root-588 MuiToolbar-regular-590 MuiToolbar-gutters-589 WithStyles(ForwardRef(Toolbar))-root-586 WithStyles(ForwardRef(Toolbar))-root-587"
  >
    <div
      className="MuiBox-root-592 MuiBox-root-593"
    >
      <button
        className="MuiButtonBase-root-614 MuiButton-root-597 MuiButton-text-599 WithStyles(ForwardRef(Button))-root-595 WithStyles(ForwardRef(Button))-root-596 Styled(WithStyles(ForwardRef(Button)))-root-594"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-598"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-617 MuiSvgIcon-fontSizeInherit-623"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 7h2v2h-2zM11 11h2v6h-2z"
            />
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
            />
          </svg>
        </span>
      </button>
      <span
        className="MuiTypography-root-628 MuiTypography-caption-631 MuiTypography-alignCenter-644 WithStyles(ForwardRef(Typography))-root-626 WithStyles(ForwardRef(Typography))-root-627"
      >
        100
      </span>
    </div>
    <div
      className="MuiBox-root-592 MuiBox-root-658"
    >
      <a
        className="MuiTypography-root-628 MuiTypography-colorInherit-650 MuiLink-root-661 MuiLink-underlineHover-663 Component-root-659 Component-root-660"
        href="/somesay/this-is-a-claim"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-617 MuiSvgIcon-fontSizeInherit-623"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
          />
        </svg>
      </a>
      <button
        className="MuiButtonBase-root-614 MuiButton-root-597 MuiButton-text-599 WithStyles(ForwardRef(Button))-root-595 WithStyles(ForwardRef(Button))-root-666 Styled(WithStyles(ForwardRef(Button)))-root-594"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-598"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-617 MuiSvgIcon-fontSizeInherit-623"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zM6 9h12v2H6V9zm8 5H6v-2h8v2zm4-6H6V6h12v2z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <h6
    className="MuiTypography-root-628 MuiTypography-subtitle1-639 MuiTypography-alignCenter-644 WithStyles(ForwardRef(Typography))-root-626 WithStyles(ForwardRef(Typography))-root-681"
  >
    @
    toby
     believes 
  </h6>
  <h5
    className="MuiTypography-root-628 MuiTypography-h5-637 MuiTypography-colorTextPrimary-653 MuiTypography-alignCenter-644 WithStyles(ForwardRef(Typography))-root-626 WithStyles(ForwardRef(Typography))-root-682"
  >
    <a
      className="MuiTypography-root-628 MuiTypography-colorInherit-650 MuiLink-root-661 MuiLink-underlineHover-663 Component-root-659 Component-root-683"
      href="/somesay/this-is-a-claim"
      onClick={[Function]}
    >
      This is a claim
    </a>
  </h5>
  <div>
    
    
  </div>
</div>
`;
